--- a/css/map.css
+++ b/css/map.css
@@ -1,14 +1,18 @@
+
+
 * {
   margin: 0;
   padding: 0;
   border: none;
-  outline: none; }
+  outline: none;
+}
 
 body {
   width: 1920px;
   height: 1080px;
   position: relative;
-  background-color: #111117; }
+  background-color: #111117;
+}
 
 .china-map {
   width: 1188px;
@@ -18,79 +22,100 @@ body {
   left: 342px;
   top: 207px;
   right: 390px;
-  z-index: 1; }
-  .china-map .map {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1; }
-  .china-map .tips {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 20;
-    background-color: transparent; }
-    .china-map .tips .tip {
-      display: flex;
-      display: -webkit-box;
-      display: -webkit-flex;
-      flex-direction: column;
-      -webkit-flex-direction: column;
-      align-items: center;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-      justify-content: space-between;
-      -webkit-box-pack: space-between;
-      -webkit-justify-content: space-between;
-      position: absolute;
-      height: 72px;
-      margin-top: -36px;
-      margin-left: -66px; }
-      .china-map .tips .tip .message {
-        height: 33px;
-        position: relative;
-        border-radius: 6px;
-        font-size: 15px;
-        padding-left: 12px;
-        padding-right: 12px;
-        display: flex;
-        display: -webkit-box;
-        display: -webkit-flex;
-        align-items: center;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-        justify-content: center;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center; }
-      .china-map .tips .tip .message::after {
-        content: '';
-        display: block;
-        width: 0;
-        height: 0;
-        position: absolute;
-        bottom: -9px;
-        border-left: 9px solid transparent;
-        border-right: 9px solid transparent; }
-      .china-map .tips .tip .message-payment {
-        color: #797903;
-        background-color: #faff98; }
-      .china-map .tips .tip .message-payment::after {
-        border-top: 9px solid #faff98; }
-      .china-map .tips .tip .message-borrow {
-        color: #ffffff;
-        background-color: #00ecef; }
-      .china-map .tips .tip .message-borrow::after {
-        border-top: 9px solid #00ecef; }
-      .china-map .tips .tip .head {
-        width: 27px;
-        height: 27px; }
+  z-index: 1;
+}
+
+.china-map .map {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.china-map .tips {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 20;
+  background-color: transparent;
+}
+
+.china-map .tips .tip {
+  display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  align-items: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  justify-content: space-between;
+  -webkit-box-pack: space-between;
+  -webkit-justify-content: space-between;
+  position: absolute;
+  height: 72px;
+  margin-top: -36px;
+  margin-left: -66px;
+}
+
+.china-map .tips .tip .message {
+  height: 33px;
+  position: relative;
+  border-radius: 6px;
+  font-size: 15px;
+  padding-left: 12px;
+  padding-right: 12px;
+  display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  justify-content: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+}
+
+.china-map .tips .tip .message::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  bottom: -9px;
+  border-left: 9px solid transparent;
+  border-right: 9px solid transparent;
+}
+
+.china-map .tips .tip .message-payment {
+  color: #797903;
+  background-color: #faff98;
+}
+
+.china-map .tips .tip .message-payment::after {
+  border-top: 9px solid #faff98;
+}
+
+.china-map .tips .tip .message-borrow {
+  color: #ffffff;
+  background-color: #00ecef;
+}
+
+.china-map .tips .tip .message-borrow::after {
+  border-top: 9px solid #00ecef;
+}
+
+.china-map .tips .tip .head {
+  width: 27px;
+  height: 27px;
+}
 
 /*# sourceMappingURL=map.css.map */
